[metadata]
name = ldraw-to-scad
version = 0.0.0
author = Danny Staple
author_email = danny@orionrobots.co.uk
maintainer = Robert Schiele
maintainer_email = rschiele@gmail.com
description = The LDraw to OpenSCAD converter library
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/orionrobots/ldraw-to-scad
project_urls =
    Bug Tracker = https://github.com/orionrobots/ldraw-to-scad/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
scripts = ldraw2scad
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
ldraw_to_scad = lib.scad
